--- a/packages/vuesax/src/layout/grid/style.sass
+++ b/packages/vuesax/src/layout/grid/style.sass
@@ -8,6 +8,7 @@
   align-items: flex-start
   justify-content: flex-start
   flex-wrap: wrap
+  margin: 0 -6px
 
 $sizes: (1: 8.33%, 2: 16.66%, 3: 25%, 4: 33.33%, 5: 41.66%, 6: 50%, 7: 58.33%, 8: 66.66%, 9: 75%, 10: 83.33%, 11: 91.66%, 12: 100%)
 
@@ -37,5 +38,3 @@ $sizes: (1: 8.33%, 2: 16.66%, 3: 25%, 4: 33.33%, 5: 41.66%, 6: 50%, 7: 58.33%, 8
     @each $num ,$size in $sizes
       &--xs-#{$num}
         width: $size
-
-
