--- a/packages/vuesax/src/components/vsOption/style.sass
+++ b/packages/vuesax/src/components/vsOption/style.sass
@@ -1,4 +1,4 @@
-@import '../../../styles/mixins'
+@import '../../styles/mixins'
 .vs-select__option
   border: 0px
   width: 100%
@@ -60,4 +60,3 @@
   &:hover:not(:disabled)
     color: -color('color')
     padding-left: 14px
-
