--- a/packages/vuesax/src/components/vsOptionGroup/style.sass
+++ b/packages/vuesax/src/components/vsOptionGroup/style.sass
@@ -1,4 +1,4 @@
-@import '../../../styles/mixins'
+@import '../../styles/mixins'
 .vs-select__option-group
   padding-left: 10px
   border-bottom: 2px solid -color('gray-1')
