--- a/packages/vuesax/src/components/vsSelect/style.sass
+++ b/packages/vuesax/src/components/vsSelect/style.sass
@@ -1,4 +1,4 @@
-@import '../../../styles/mixins'
+@import '../../styles/mixins'
 @import 'root'
 
 @mixin state($color)
@@ -14,7 +14,7 @@
     color: -color($color,1)
     &:hover
       &:after
-          opacity: 0
+        opacity: 0
     &:after
       width: calc(100% - 4px)
       height: calc(100% - 4px)
@@ -179,7 +179,6 @@
         margin-top: -4px
       ~ .vs-icon-arrow
         margin-top: -6px
-
 
   &__chips
     width: 100%
