--- a/packages/vuesax/src/components/vsTextarea/Base/style.sass
+++ b/packages/vuesax/src/components/vsTextarea/Base/style.sass
@@ -2,34 +2,34 @@
 @import 'root'
 
 @mixin state($color)
-  .vs-input
+  .vs-textarea
     background: -color($color,.1) !important
     color: -color($color,1)
-  .vs-input__label
+  .vs-textarea__label
     color: -color($color,1)
-  .vs-input__icon
+  .vs-textarea__icon
     color: -color($color,1)
     background: -color($color,.1)
     box-shadow: -15px 10px 10px -10px -color($color,.1)
 
-.vs-input-parent
+.vs-textarea-parent
   display: flex
   align-self: center
   justify-content: center
   flex-direction: column
   position: relative
   &.square
-    .vs-input-content
+    .vs-textarea-content
       border-radius: 0px !important
   &.textWhite
-    .vs-input
+    .vs-textarea
       color: #fff
   &.transparent
-    .vs-input
+    .vs-textarea
       background: transparent !important
   &.block
     width: 100%
-    .vs-input
+    .vs-textarea
       width: 100%
   &--has-label
     margin-top: 20px !important
@@ -44,28 +44,28 @@
   &--state-primary
     @include state('primary')
 
-.vs-input-content
+.vs-textarea-content
   display: flex
   align-items: center
   justify-content: flex-start
   position: relative
   border-radius: 12px
-  + .vs-input__message
+  + .vs-textarea__message
     padding-top: 2px
 
   &--has-color
-    .vs-input
+    .vs-textarea
       // box-shadow: 0px 10px 20px -5px -color('color',.3)
       &:focus
         border-bottom: 2px solid -color('color',1)
-        ~ .vs-input__icon
+        ~ .vs-textarea__icon
           color: -color('color',1)
-        ~ .vs-input__label
+        ~ .vs-textarea__label
           color: -color('color',1)
-        ~ .vs-input__label--placeholder
+        ~ .vs-textarea__label--placeholder
           color: -color('color',1)
 
-.vs-input
+.vs-textarea
   border: 2px solid transparent
   background: -color('gray-2')
   color: -color('text')
@@ -77,30 +77,31 @@
   &:focus
     background: -color('gray-3')
     padding-left: 15px
-    &.vs-input--has-icon:not(.vs-input--has-icon--after)
+    &.vs-textarea--has-icon:not(.vs-textarea--has-icon--after)
       padding-left: 40px
-      ~ .vs-input__icon
+      ~ .vs-textarea__icon
         box-shadow: 15px 10px 10px -10px rgba(0,0,0, -var(shadow-opacity))
-      ~ .vs-input__label:not(.vs-input__label--placeholder):not(.vs-input__label--label)
+      ~ .vs-textarea__label:not(.vs-textarea__label--placeholder):not(.vs-textarea__label--label)
         left: 44px
-    ~ .vs-input__icon
+    ~ .vs-textarea__icon
       box-shadow: -15px 10px 10px -10px rgba(0,0,0, -var(shadow-opacity))
       transform: translate(-6px, -6px)
       background: -color('gray-1')
       &--after
         transform: translate(6px, -6px)
 
-    ~ .vs-input__label:not(.vs-input__label--placeholder):not(.vs-input__label--label)
+    ~ .vs-textarea__label:not(.vs-textarea__label--placeholder):not(.vs-textarea__label--label)
       opacity: 0
       left: 20px
-    ~ .vs-input__label--placeholder
+    ~ .vs-textarea__label--placeholder
       opacity: 1
       visibility: visible
       pointer-events: auto
-      transform: translate(-3%, -77%)
+      transform: translate(-3%, -27px)
       font-size: .75rem
   &__label
     position: absolute
+    top: 9px
     left: 13px
     font-size: .8rem
     transition: all .25s ease
@@ -108,7 +109,6 @@
     user-select: none
     pointer-events: none
     width: 100%
-    height: 100%
     display: flex
     align-items: center
     justify-content: flex-start
@@ -116,7 +116,7 @@
     &--hidden
       opacity: 0
       visibility: hidden
-      &.vs-input__label--placeholder
+      &.vs-textarea__label--placeholder
         opacity: 1
         visibility: visible
         pointer-events: auto
@@ -126,28 +126,28 @@
       opacity: 1
       visibility: visible
       pointer-events: auto
-      transform: translate(-2px, -77%)
+      transform: translate(-2px, -27px)
       font-size: .75rem
   &--has-icon
     padding-left: 38px
-    ~ .vs-input__label
+    ~ .vs-textarea__label
       left: 44px
 
     &--after
       padding-left: 7px
       padding-right: 38px
-      ~ .vs-input__label
+      ~ .vs-textarea__label
         left: 13px
-      &.vs-input__label--label
+      &.vs-textarea__label--label
         transform: translate(calc(-3px - 22px), -80%) !important
     &:focus
       &--has-icon
         &--after
-          ~ .vs-input__label
+          ~ .vs-textarea__label
             left: 44px
-          ~ .vs-input__label--placeholder
+          ~ .vs-textarea__label--placeholder
             transform: translate(calc(-3px - 22px), -80%) !important
-          ~ .vs-input__label
+          ~ .vs-textarea__label
             left: 44px
 
   &__icon
@@ -175,7 +175,7 @@
         box-shadow: -15px 10px 10px -10px rgba(0,0,0, -var(shadow-opacity))
         transform: translate(-6px, -6px)
         background: -color('gray-1')
-        &.vs-input__icon--after
+        &.vs-textarea__icon--after
           transform: translate(6px, -6px)
 
   &__message
@@ -205,13 +205,13 @@
     overflow: hidden
     border-radius: 5px
     &--danger
-      .vs-input__progress__bar
+      .vs-textarea__progress__bar
         background: -color('danger',1)
     &--warn
-      .vs-input__progress__bar
+      .vs-textarea__progress__bar
         background: -color('warn',1)
     &--success
-      .vs-input__progress__bar
+      .vs-textarea__progress__bar
         background: -color('success',1)
     &__bar
       width: 32%
@@ -258,14 +258,14 @@
       opacity: .2
       content: ''
 
-.vs-input-parent
+.vs-textarea-parent
   &--border
-    .vs-input__icon
+    .vs-textarea__icon
       background: transparent !important
       box-shadow: none !important
-    .vs-input-content
+    .vs-textarea-content
       border-radius: 0px
-      .vs-input__affects
+      .vs-textarea__affects
         width: 100%
         height: 100%
         position: absolute
@@ -288,20 +288,20 @@
           transition: all .25s ease
           left: 50%
           transform: translate(-50%)
-      .vs-input
+      .vs-textarea
         background: transparent
         border-radius: 0px
         &:focus
-          ~ .vs-input__affects
-            .vs-input__affects__2
+          ~ .vs-textarea__affects
+            .vs-textarea__affects__2
               width: 100%
   &--shadow
-    .vs-input__icon
+    .vs-textarea__icon
       background: transparent
       z-index: 100
       // box-shadow: none !important
-    .vs-input-content
-      .vs-input__affects
+    .vs-textarea-content
+      .vs-textarea__affects
         width: 100%
         height: 100%
         position: absolute
@@ -319,18 +319,18 @@
           transition: all .25s ease
           z-index: 200
           border-radius: inherit
-      .vs-input
+      .vs-textarea
         background: transparent
         border-radius: 0px
         border: 2px solid transparent
         &:focus
           transform: translate(0,3px)
-          ~ .vs-input__icon
+          ~ .vs-textarea__icon
             background: -color('background') !important
             opacity: 1
             box-shadow: 0px 10px 20px -5px rgba(0,0,0, -var(shadow-opacity)) !important
-          ~ .vs-input__affects
-            .vs-input__affects__1
+          ~ .vs-textarea__affects
+            .vs-textarea__affects__1
               transform: translate(0,3px)
               box-shadow: 0px 0px 3px 0px rgba(0,0,0, -var(shadow-opacity))
 
